# Stereographic-Projection-of-Otto

./: .gitignore  README.md  main.py  pyproject.toml
